tests/error/match_non_final_catchall_pattern.vow
// TEST: error-code UnsupportedPattern
module MatchNonFinalCatchallPattern

enum E {
    A,
    B,
}

fn binding(value: E) -> i64 {
    match value {
        whole => 1,
        E::A => 2,
    }
}

fn wildcard(value: E) -> i64 {
    match value {
        _ => 3,
        E::B => 4,
    }
}

fn main() -> i32 {
    0
}
